--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -6,7 +6,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  background-image: url('/../../../images/header-image.png');
+  background-image: url('../../../images/header-image.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right bottom;
