--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -5,7 +5,7 @@
     position: absolute;
     top: 0;
     right: -210px;
-    background-image: url('/../../../images/kaufman-triangle.svg');
+    background-image: url('../../../images/kaufman-triangle.svg');
     background-size: contain;
     background-repeat: no-repeat;
     z-index: -1;
