--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -3,7 +3,7 @@
     padding: 0;
     width: 620px;
     height: 608px;
-    background-image: url('/../../../images/khan-book.jpg');
+    background-image: url('../../../images/khan-book.jpg');
     background-repeat: no-repeat;
     background-position: left bottom;
     background-size: cover;
