--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,11 +1,10 @@
 .video__iframes {
-    margin: 0 auto;
     width: 1050px;
+    margin: 0 auto -50px auto;
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: space-between;
     position: relative;
     list-style: none;
     padding: 50px 0 0 0;
-    margin-bottom: -50px;
 }
